--- a/index.html
+++ b/index.html
@@ -6,14 +6,63 @@
       href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@400;700;800&display=swap"
       rel="stylesheet"
     />
-    <link rel="icon" href="img/adri-logo.png" type="image/gif" sizes="32x32" />
+    <link rel="shortcut icon" href="img/lambda-logo.png" type="image/x-icon" />
+
     <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
 
   <body>
     <!-- Navigation bar -->
     <nav class="nav">
-      <img src="img/adri-logo.png" alt="Logo" class="nav__logo" />
+      <a href="#" target="_blank" class="nav__logo">
+        <svg
+          id="svg"
+          version="1.1"
+          xmlns="http://www.w3.org/2000/svg"
+          xmlns:xlink="http://www.w3.org/1999/xlink"
+          width="400"
+          height="400"
+          viewBox="0, 0, 400,400"
+        >
+          <g id="svgg">
+            <path
+              id="path0"
+              d=""
+              stroke="none"
+              fill="#040404"
+              fill-rule="evenodd"
+            ></path>
+            <path
+              id="path1"
+              d=""
+              stroke="none"
+              fill="#080404"
+              fill-rule="evenodd"
+            ></path>
+            <path
+              id="path2"
+              d=""
+              stroke="none"
+              fill="#080404"
+              fill-rule="evenodd"
+            ></path>
+            <path
+              id="path3"
+              d=""
+              stroke="none"
+              fill="#080404"
+              fill-rule="evenodd"
+            ></path>
+            <path
+              id="path4"
+              d=""
+              stroke="none"
+              fill="#080404"
+              fill-rule="evenodd"
+            ></path>
+          </g>
+        </svg>
+      </a>
       <ul class="nav__container">
         <li><a href="#header" class="nav__link">Home</a></li>
         <li><a href="#skills" class="nav__link">Skills</a></li>
@@ -22,6 +71,7 @@
         <li><a href="#contact" class="nav__link">Contact</a></li>
       </ul>
     </nav>
+
     <!-- Header -->
     <header id="header" class="header">
       <h1 class="header__title">
